[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/textures/playerV2.png" type="Texture" id=1]
[ext_resource path="res://player/states/Move.gd" type="Script" id=2]
[ext_resource path="res://player/states/Shoot.gd" type="Script" id=3]
[ext_resource path="res://player/Player.gd" type="Script" id=4]
[ext_resource path="res://player/CollisionArea.gd" type="Script" id=5]
[ext_resource path="res://sounds/thruster-fire-player.ogg" type="AudioStream" id=6]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 257
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -1, -16, 1, -16, 3, -13, 3, -7, 4, -7, 4, 0, 11, 1, 14, 5, 12, 5, 15, 9, 11, 9, 16, 15, 12, 15, 3, 11, -3, 11, -12, 15, -16, 15, -11, 9, -15, 9, -12, 5, -14, 5, -11, 1, -4, 0, -4, -7, -3, -7, -3, -13 )

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 24
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 5 )

[node name="Collision" type="CollisionPolygon2D" parent="CollisionArea"]
polygon = PoolVector2Array( -1, -16, 1, -16, 3, -13, 3, -7, 4, -7, 4, 0, 11, 1, 14, 5, 12, 5, 15, 9, 11, 9, 16, 15, 12, 15, 3, 11, -3, 11, -12, 15, -16, 15, -11, 9, -15, 9, -12, 5, -14, 5, -11, 1, -4, 0, -4, -7, -3, -7, -3, -13 )

[node name="HitEffectTimer" type="Timer" parent="CollisionArea"]
process_mode = 0
one_shot = true

[node name="States" type="Node" parent="."]

[node name="Move" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Shoot" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="TimeBetweenShots" type="Timer" parent="States/Shoot"]
process_mode = 0
one_shot = true

[node name="ShootFasterTimer" type="Timer" parent="States/Shoot"]
process_mode = 0
one_shot = true

[node name="FiringPositions" type="Node2D" parent="."]

[node name="LeftGun" type="Node2D" parent="FiringPositions"]
position = Vector2( -10, 0 )

[node name="RightGun" type="Node2D" parent="FiringPositions"]
position = Vector2( 10, 0 )

[node name="ThrusterPosition" type="Node2D" parent="."]
position = Vector2( 0, 14 )

[node name="ThrusterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.118
stream_paused = true

[connection signal="body_entered" from="CollisionArea" to="CollisionArea" method="_on_CollisionArea_body_entered"]
[connection signal="timeout" from="CollisionArea/HitEffectTimer" to="CollisionArea" method="_on_HitEffectTimer_timeout"]
[connection signal="timeout" from="States/Shoot/TimeBetweenShots" to="States/Shoot" method="_on_TimeBetweenShots_timeout"]
[connection signal="timeout" from="States/Shoot/ShootFasterTimer" to="States/Shoot" method="_on_ShootFasterTimer_timeout"]
